<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/activity_mine_about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/fanh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/setting_activity_about_us"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_very_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:background="@drawable/logo_wod" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/setting_activity_about_version"
                android:textColor="@color/gray_333"
                android:textSize="@dimen/activity_title_normal" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_333" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/setting_activity_about_deal"
            android:textColor="@color/blue"
            android:textSize="@dimen/activity_title_large"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_activity_about_phone"
                android:textColor="@color/blue"
                android:textSize="@dimen/activity_title_normal" />

            <TextView
                android:id="@+id/about_no1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_activity_about_no1"
                android:textColor="@color/blue"
                android:textSize="@dimen/activity_title_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/string_seprator"
                android:textColor="@color/blue"
                android:textSize="@dimen/activity_title_normal" />

            <TextView
                android:id="@+id/about_no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_activity_about_no2"
                android:textColor="@color/blue"
                android:textSize="@dimen/activity_title_normal" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="29dp"
            android:layout_marginTop="19dp"
            android:text="@string/copyright"
            android:textColor="@color/blue"
            android:textSize="9sp" />
    </LinearLayout>

</LinearLayout>