<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:text="@string/string_title"
            android:textColor="@color/gray_333"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/string_folder_download"
            android:textColor="@color/gray_333"
            android:textSize="14sp" />
    </LinearLayout>

    <include layout="@layout/dialog_line" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners_bg_blue"
        android:text="@string/string_sure"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>