<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/forget_pwd_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/fanh" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_very_large" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_pwd_linear_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/corners_bg_white_2" >

            <EditText
                android:id="@+id/tableRow_edit_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/register_input_phone_num"
                android:paddingLeft="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@drawable/corners_bg_white_2" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:focusable="true"
                    android:hint="@string/forget_pwd_input_verificate"
                    android:paddingLeft="5dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </TableRow>

            <Button
                android:id="@+id/forget_pwd_btn_verificate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:background="@drawable/corners_bg_blue"
                android:gravity="center"
                android:text="@string/forget_pwd_getverificate"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/forget_pwd_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/corners_bg_blue"
            android:gravity="center"
            android:text="@string/forget_pwd_next"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_pwd_linear_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/corners_bg_white_2" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/forget_pwd_pwd"
                android:paddingLeft="5dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@drawable/corners_bg_white_2" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:focusable="true"
                    android:hint="@string/forget_pwd_pwd_sure"
                    android:paddingLeft="5dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </TableRow>
        </LinearLayout>

        <Button
            android:id="@+id/forget_pwd_btn_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/corners_bg_blue"
            android:gravity="center"
            android:text="@string/main_label_setting"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>