<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.lht.pan_android.activity.asyncProtected.MoveActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/blue"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/move_cancle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/string_cancel"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/move_filter"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/move_sure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/string_sure"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="@color/gray_ccc" />

        <HorizontalScrollView
            android:id="@+id/move_bread_scrollview"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@color/white"
            android:scrollbars="none" >
        </HorizontalScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:src="@color/gray_ccc" />

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/move_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"
            android:divider="@color/gray_ed"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:smoothScrollbar="true"
            ptr:ptrHeaderSubTextColor="@color/gray_777"
            ptr:ptrHeaderTextColor="@color/gray_333"
            ptr:ptrListViewExtrasEnabled="false"
            ptr:ptrScrollingWhileRefreshingEnabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/move_folder_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="2"
                android:background="@drawable/corners_bg_white_2"
                android:hint="@string/createnewfolder_name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
                android:textColorHint="@color/gray_999"
                android:textSize="12sp" />

            <Button
                android:id="@+id/move_create_folder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/corners_bg_blue"
                android:text="@string/string_create_folder"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/move_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:indeterminateDrawable="@anim/progress_rotate"
        android:visibility="gone" />

</RelativeLayout>