<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/blue"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/activity_mine_advice_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@drawable/fanh" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/setting_activity_advice"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_very_large" />

        <Button
            android:id="@+id/feedback_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@color/blue"
            android:text="@string/string_commit"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp" >

            <!-- 表格布局：第一行 -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/corners_bg_white"
                android:padding="10dp" >

                <EditText
                    android:id="@+id/feedback_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/setting_activity_advice_phone"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="70"
                    android:singleLine="true"
                    android:textColor="@color/gray_333"
                    android:textSize="13sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/corners_bg_white"
                android:padding="10dp" >

                <EditText
                    android:id="@+id/feedback_advice"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:hint="@string/setting_activity_advice_content"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    android:textColor="@color/gray_333"
                    android:textSize="13sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>